CHATS_SIT/force-app/main/default/objects/batchsit_t_fcompsn_failr_hist__x.object
<CustomObject>
    <description>batchsit$t_fcompsn_failr_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_fcompsn_failr_hist</externalName>
    <fields>
        <fullName>cde_reason_failr_fcompsn__c</fullName>
        <description>cde_reason_failr_fcompsn</description>
        <externalDeveloperName>cde_reason_failr_fcompsn</externalDeveloperName>
        <label>Family Composition Reason Failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_failr_hist2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_doc__c</fullName>
        <description>idn_doc</description>
        <externalDeveloperName>idn_doc</externalDeveloperName>
        <label>Doc ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Family composition Eligibility ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_fcompsn_failr__c</fullName>
        <description>idn_fcompsn_failr</description>
        <externalDeveloperName>idn_fcompsn_failr</externalDeveloperName>
        <label>Family composition Failure ID</label>
        <length>10</length>
        <referenceTo>batchsit_t_fcompsn_failr__x</referenceTo>
        <relationshipLabel>Household Ineligibility Reasons Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_failr_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_fcompsn_failr_hist__c</fullName>
        <description>idn_fcompsn_failr_hist</description>
        <externalDeveloperName>idn_fcompsn_failr_hist</externalDeveloperName>
        <label>Family composition Failure Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_reason_failr_fcompsn__c</fullName>
        <description>idn_reason_failr_fcompsn</description>
        <externalDeveloperName>idn_reason_failr_fcompsn</externalDeveloperName>
        <label>Family composition Reason Failure</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_failr_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_updtd_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ind_updtd_user</description>
        <externalDeveloperName>ind_updtd_user</externalDeveloperName>
        <label>Last updated user ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_failr_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Household Ineligibility History</label>
    <pluralLabel>Household Ineligibility History</pluralLabel>
</CustomObject>